Added the 2 .tcl files to the Visual Studio project.

--- a/activexscripthost.vcproj
+++ b/activexscripthost.vcproj
@@ -321,6 +321,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Tcl Files"
+			>
+			<File
+				RelativePath=".\tcl\activexscripthost.tcl"
+				>
+			</File>
+			<File
+				RelativePath=".\tcl\pkgIndex.tcl"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
